--- a/src/main/resources/static/pages/runs.html
+++ b/src/main/resources/static/pages/runs.html
@@ -382,7 +382,7 @@
 
         <!-- /.row -->
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-10">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         Kitchen Sink
@@ -407,9 +407,12 @@
                                 </thead>
                                 <tbody>
                                 <tr ng-repeat="run in runs">
-                                    <td>{{run.id}}</td>
-                                    <td><button type="button" ng-class="$run.status == 'SUCCESS' ? btn btn-success :
-                                            ($run.status == 'PENDING' ? btn btn-warning : btn btn-danger)">{{run.status}}</button></td>
+                                    <td>{{run.uuid}}</td>
+                                    <td>
+                                        <button type="button" ng-show="run.status == 'SUCCESS'" class="btn btn-success">{{run.status}}</button>
+                                        <button type="button" ng-show="run.status == 'PENDING'" class="btn btn-warning">{{run.status}}</button>
+                                        <button type="button" ng-show="run.status == 'FAILURE'" class="btn btn-danger">{{run.status}}</button>
+                                    </td>
                                     <td>{{run.jdbcUrl}}</td>
                                     <td>{{run.host}}</td>
                                     <td>{{run.user}}</td>
