--- a/src/main/resources/static/pages/runs.html
+++ b/src/main/resources/static/pages/runs.html
@@ -409,8 +409,9 @@
                                 <tr ng-repeat="run in runs">
                                     <td>{{run.uuid}}</td>
                                     <td>
+                                        <button type="button" ng-show="run.status == 'PENDING'" class="btn btn-info">{{run.status}}</button>
                                         <button type="button" ng-show="run.status == 'SUCCESS'" class="btn btn-success">{{run.status}}</button>
-                                        <button type="button" ng-show="run.status == 'PENDING'" class="btn btn-warning">{{run.status}}</button>
+                                        <button type="button" ng-show="run.status == 'RUNNING'" class="btn btn-warning">{{run.status}}</button>
                                         <button type="button" ng-show="run.status == 'FAILURE'" class="btn btn-danger">{{run.status}}</button>
                                     </td>
                                     <td>{{run.jdbcUrl}}</td>
