--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -373,8 +373,9 @@
     </nav>
 
    <!-- REPLACE BY SOMETHING WITH ANGULAR ROUTES-->
-    <div ng-view></div>
-
+    <div id="page-wrapper">
+        <div ng-view></div>
+    </div>
 </div>
 <!-- /#wrapper -->
 
@@ -397,8 +398,8 @@
 <script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="./bower_components/angular-resource/angular-resource.min.js"></script>
 <script type="text/javascript" src="./app/app.js"></script>
-<script type="text/javascript" src="./app/controllers/controllers.js"></script>
-<script type="text/javascript" src="./app/services/services.js"></script>
+<script type="text/javascript" src="./app/controllers/runController.js"></script>
+<script type="text/javascript" src="./app/services/runService.js"></script>
 <script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
 
 
