show run detail using ngroute

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,6 +29,9 @@
     <!-- Custom Fonts -->
     <link href="./bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <!-- Bootstrap Star Rating -->
+    <link href="./bower_components/bootstrap-star-rating/css/star-rating.css" media="all" rel="stylesheet" type="text/css" />
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -294,7 +297,7 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#/runList"><i class="fa fa-table fa-fw"></i> Runs</a>
+                        <a href="#/runs"><i class="fa fa-table fa-fw"></i> Runs</a>
                     </li>
                     <li>
                         <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
@@ -398,9 +401,12 @@
 <script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="./bower_components/angular-resource/angular-resource.min.js"></script>
 <script type="text/javascript" src="./app/app.js"></script>
+<script type="text/javascript" src="./app/routes.js"></script>
 <script type="text/javascript" src="./app/controllers/runController.js"></script>
+<script type="text/javascript" src="./app/controllers/runShowController.js"></script>
 <script type="text/javascript" src="./app/services/runService.js"></script>
 <script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
+<script type="text/javascript" src="./bower_components/bootstrap-star-rating/js/star-rating.js" ></script>
 
 
 </body>
