--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,6 +32,12 @@
     <!-- Bootstrap Star Rating -->
     <link href="./bower_components/bootstrap-star-rating/css/star-rating.css" media="all" rel="stylesheet" type="text/css" />
 
+    <link rel="stylesheet" href="./bower_components/nvd3/build/nv.d3.css" type="text/css" >
+
+    <link href="./bower_components/angular-jk-rating-stars/dist/jk-rating-stars.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="./css/custom.css" rel="stylesheet" type="text/css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -53,7 +59,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Cute-DB</a>
+            <a class="navbar-brand" href="/">Cute-DB</a>
         </div>
         <!-- /.navbar-header -->
 
@@ -407,8 +413,10 @@
 <script type="text/javascript" src="./app/services/runService.js"></script>
 <script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
 <script type="text/javascript" src="./bower_components/bootstrap-star-rating/js/star-rating.js" ></script>
-
-
+<script type="text/javascript" src="./bower_components/d3/d3.js"></script>
+<script type="text/javascript" src="./bower_components/nvd3/build/nv.d3.js"></script> <!-- or use another assembly -->
+<script type="text/javascript" src="./bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+<script type="text/javascript" src="./bower_components/angular-jk-rating-stars/dist/jk-rating-stars.js"></script>
 </body>
 
 </html>
