Display Run details - Step 2, fix #11

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -290,7 +290,7 @@
                     <li>
                         <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                     </li>
-                    <li>
+                   <!-- <li>
                         <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
@@ -300,12 +300,12 @@
                                 <a href="morris.html">Morris.js Charts</a>
                             </li>
                         </ul>
-                        <!-- /.nav-second-level -->
-                    </li>
+                        &lt;!&ndash; /.nav-second-level &ndash;&gt;
+                    </li>-->
                     <li>
                         <a href="#/runs"><i class="fa fa-table fa-fw"></i> Runs</a>
                     </li>
-                    <li>
+                   <!-- <li>
                         <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
                     </li>
                     <li>
@@ -330,7 +330,7 @@
                                 <a href="grid.html">Grid</a>
                             </li>
                         </ul>
-                        <!-- /.nav-second-level -->
+                        &lt;!&ndash; /.nav-second-level &ndash;&gt;
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
@@ -357,10 +357,10 @@
                                         <a href="#">Third Level Item</a>
                                     </li>
                                 </ul>
-                                <!-- /.nav-third-level -->
+                                &lt;!&ndash; /.nav-third-level &ndash;&gt;
                             </li>
                         </ul>
-                        <!-- /.nav-second-level -->
+                        &lt;!&ndash; /.nav-second-level &ndash;&gt;
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
@@ -372,8 +372,8 @@
                                 <a href="login.html">Login Page</a>
                             </li>
                         </ul>
-                        <!-- /.nav-second-level -->
-                    </li>
+                        &lt;!&ndash; /.nav-second-level &ndash;&gt;
+                    </li>-->
                 </ul>
             </div>
             <!-- /.sidebar-collapse -->
@@ -417,6 +417,8 @@
 <script type="text/javascript" src="./bower_components/nvd3/build/nv.d3.js"></script> <!-- or use another assembly -->
 <script type="text/javascript" src="./bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
 <script type="text/javascript" src="./bower_components/angular-jk-rating-stars/dist/jk-rating-stars.js"></script>
+<script type="text/javascript" src="./bower_components/angular-google-chart/ng-google-chart.min.js"></script>
+
 </body>
 
 </html>
