--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -290,90 +290,10 @@
                     <li>
                         <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                     </li>
-                   <!-- <li>
-                        <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li>
-                                <a href="flot.html">Flot Charts</a>
-                            </li>
-                            <li>
-                                <a href="morris.html">Morris.js Charts</a>
-                            </li>
-                        </ul>
-                        &lt;!&ndash; /.nav-second-level &ndash;&gt;
-                    </li>-->
+
                     <li>
                         <a href="#/runs"><i class="fa fa-table fa-fw"></i> Runs</a>
                     </li>
-                   <!-- <li>
-                        <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li>
-                                <a href="panels-wells.html">Panels and Wells</a>
-                            </li>
-                            <li>
-                                <a href="buttons.html">Buttons</a>
-                            </li>
-                            <li>
-                                <a href="notifications.html">Notifications</a>
-                            </li>
-                            <li>
-                                <a href="typography.html">Typography</a>
-                            </li>
-                            <li>
-                                <a href="icons.html"> Icons</a>
-                            </li>
-                            <li>
-                                <a href="grid.html">Grid</a>
-                            </li>
-                        </ul>
-                        &lt;!&ndash; /.nav-second-level &ndash;&gt;
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li>
-                                <a href="#">Second Level Item</a>
-                            </li>
-                            <li>
-                                <a href="#">Second Level Item</a>
-                            </li>
-                            <li>
-                                <a href="#">Third Level <span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Third Level Item</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Third Level Item</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Third Level Item</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Third Level Item</a>
-                                    </li>
-                                </ul>
-                                &lt;!&ndash; /.nav-third-level &ndash;&gt;
-                            </li>
-                        </ul>
-                        &lt;!&ndash; /.nav-second-level &ndash;&gt;
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li>
-                                <a href="blank.html">Blank Page</a>
-                            </li>
-                            <li>
-                                <a href="login.html">Login Page</a>
-                            </li>
-                        </ul>
-                        &lt;!&ndash; /.nav-second-level &ndash;&gt;
-                    </li>-->
                 </ul>
             </div>
             <!-- /.sidebar-collapse -->
@@ -410,7 +330,9 @@
 <script type="text/javascript" src="./app/routes.js"></script>
 <script type="text/javascript" src="./app/controllers/runController.js"></script>
 <script type="text/javascript" src="./app/controllers/runShowController.js"></script>
+<script type="text/javascript" src="./app/controllers/runDetailController.js"></script>
 <script type="text/javascript" src="./app/services/runService.js"></script>
+<script type="text/javascript" src="./app/directives/lintInfo.js"></script>
 <script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
 <script type="text/javascript" src="./bower_components/bootstrap-star-rating/js/star-rating.js" ></script>
 <script type="text/javascript" src="./bower_components/d3/d3.js"></script>
@@ -418,7 +340,6 @@
 <script type="text/javascript" src="./bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
 <script type="text/javascript" src="./bower_components/angular-jk-rating-stars/dist/jk-rating-stars.js"></script>
 <script type="text/javascript" src="./bower_components/angular-google-chart/ng-google-chart.min.js"></script>
-
 </body>
 
 </html>
