--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -340,6 +340,10 @@
 <script type="text/javascript" src="./bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
 <script type="text/javascript" src="./bower_components/angular-jk-rating-stars/dist/jk-rating-stars.js"></script>
 <script type="text/javascript" src="./bower_components/angular-google-chart/ng-google-chart.min.js"></script>
+<script src="./bower_components/angular/angular.js"></script>
+<script src="./bower_components/angular-animate/angular-animate.js"></script>
+<script src="./bower_components/angular-strap/dist/angular-strap.min.js"></script>
+<script src="./bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
 </body>
 
 </html>
