nouveau chart stars scoring

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,7 +30,7 @@
     <link href="./bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Bootstrap Star Rating -->
-    <link href="./bower_components/bootstrap-star-rating/css/star-rating.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="./bower_components/angular-input-stars/angular-input-stars.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./bower_components/nvd3/build/nv.d3.css" type="text/css" >
 
@@ -334,7 +334,7 @@
 <script type="text/javascript" src="./app/services/runService.js"></script>
 <script type="text/javascript" src="./app/directives/lintInfo.js"></script>
 <script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
-<script type="text/javascript" src="./bower_components/bootstrap-star-rating/js/star-rating.js" ></script>
+<!--<script type="text/javascript" src="./bower_components/bootstrap-star-rating/js/star-rating.js" ></script>-->
 <script type="text/javascript" src="./bower_components/d3/d3.js"></script>
 <script type="text/javascript" src="./bower_components/nvd3/build/nv.d3.js"></script> <!-- or use another assembly -->
 <script type="text/javascript" src="./bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
@@ -344,6 +344,9 @@
 <script src="./bower_components/angular-animate/angular-animate.js"></script>
 <script src="./bower_components/angular-strap/dist/angular-strap.min.js"></script>
 <script src="./bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
+<script src="./bower_components/angular-input-stars/angular-input-stars.js"></script>
+<script src="./bower_components/d3/d3.js"></script>
+<script src="./js/PvtlD3TreemapDirective.js"></script>
 </body>
 
 </html>
