--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -350,6 +350,11 @@
 <script src="./bower_components/angular-input-stars/angular-input-stars.js"></script>
 <script src="./bower_components/d3/d3.js"></script>
 <script src="./js/PvtlD3TreemapDirective.js"></script>
+<script>
+    $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
 </body>
 
 </html>
