--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -272,6 +272,17 @@
                 </ul>
                 <!-- /.dropdown-user -->
             </li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <i class="fa fa-cog fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                </a>
+                <ul class="dropdown-menu dropdown-user">
+                    <li><a href="#"><i class="fa fa-info-circle fa-fw"></i> Version : 0.1.0</a>
+                    </li>
+                </ul>
+                <!-- /.dropdown-user -->
+            </li>
+
             <!-- /.dropdown -->
         </ul>
         <!-- /.navbar-top-links -->
