--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -348,7 +348,6 @@
 <script type="text/javascript" src="./app/services/runService.js"></script>
 <script type="text/javascript" src="./app/directives/lintInfo.js"></script>
 <script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
-<!--<script type="text/javascript" src="./bower_components/bootstrap-star-rating/js/star-rating.js" ></script>-->
 <script type="text/javascript" src="./bower_components/d3/d3.js"></script>
 <script type="text/javascript" src="./bower_components/nvd3/build/nv.d3.js"></script> <!-- or use another assembly -->
 <script type="text/javascript" src="./bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
@@ -361,6 +360,9 @@
 <script type="text/javascript" src="./bower_components/angular-input-stars/angular-input-stars.js"></script>
 <script type="text/javascript" src="./bower_components/d3/d3.js"></script>
 <script type="text/javascript" src="./js/PvtlD3TreemapDirective.js"></script>
+<script type="text/javascript" src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+<script type="text/javascript" src="./bower_components/chart.js/dist/Chart.js"></script>
+<script type="text/javascript" src="./bower_components/angular-chart.js"></script>
 </body>
 
 </html>
