--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -37,7 +37,6 @@
 
     <link rel="stylesheet" href="./bower_components/nvd3/build/nv.d3.css" type="text/css" >
 
-    <link href="./bower_components/angular-jk-rating-stars/dist/jk-rating-stars.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="./css/custom.css" rel="stylesheet" type="text/css">
 
@@ -336,9 +335,10 @@
 <script src="./bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="./dist/js/sb-admin-2.js"></script>
+<script src="./bower_components/startbootstrap-sb-admin-2-be/dist/js/sb-admin-2.js"></script>
 
 <script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
+<script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
 <script type="text/javascript" src="./bower_components/angular-resource/angular-resource.min.js"></script>
 <script type="text/javascript" src="./app/app.js"></script>
 <script type="text/javascript" src="./app/routes.js"></script>
@@ -347,11 +347,13 @@
 <script type="text/javascript" src="./app/controllers/runDetailController.js"></script>
 <script type="text/javascript" src="./app/services/runService.js"></script>
 <script type="text/javascript" src="./app/directives/lintInfo.js"></script>
-<script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
-<script type="text/javascript" src="./bower_components/d3/d3.js"></script>
+<script type="text/javascript" src="./app/directives/tooltip.js"></script>
+<!--<script type="text/javascript" src="./bower_components/d3/d3.js"></script>
 <script type="text/javascript" src="./bower_components/nvd3/build/nv.d3.js"></script> <!-- or use another assembly -->
-<script type="text/javascript" src="./bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
-<script type="text/javascript" src="./bower_components/angular-jk-rating-stars/dist/jk-rating-stars.js"></script>
+<!--<script type="text/javascript" src="./bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.2/nv.d3.min.js"></script>
+<script src="https://rawgit.com/krispo/angular-nvd3/v1.0.6/dist/angular-nvd3.js"></script>
+<!--script type="text/javascript" src="./bower_components/angular-jk-rating-stars/dist/jk-rating-stars.js"></script>-->
 <script type="text/javascript" src="./bower_components/angular-google-chart/ng-google-chart.min.js"></script>
 <script type="text/javascript" src="./bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="./bower_components/angular-animate/angular-animate.js"></script>
@@ -359,10 +361,10 @@
 <script type="text/javascript" src="./bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
 <script type="text/javascript" src="./bower_components/angular-input-stars/angular-input-stars.js"></script>
 <script type="text/javascript" src="./bower_components/d3/d3.js"></script>
-<script type="text/javascript" src="./js/PvtlD3TreemapDirective.js"></script>
+<!--<script type="text/javascript" src="./js/PvtlD3TreemapDirective.js"></script>-->
 <script type="text/javascript" src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script type="text/javascript" src="./bower_components/chart.js/dist/Chart.js"></script>
-<script type="text/javascript" src="./bower_components/angular-chart.js"></script>
+<script type="text/javascript" src="./bower_components/angular-chart.js/dist/angular-chart.js"></script>
 </body>
 
 </html>
